--- a/examples/guidance_test/CMakeLists.txt
+++ b/examples/guidance_test/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
 
+# set Python path
+set(PYTHON_INCLUDE_DIRS "/usr/include/python3.8")
+set(PYTHON_LIBRARIES "/usr/lib/x86_64-linux-gnu/libpython3.8.so")
+
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 set(BINDIR	"${CMAKE_SOURCE_DIR}/../../bin")
@@ -12,8 +16,8 @@ get_filename_component(ProjectId ${CMAKE_CURRENT_LIST_DIR} NAME)
 string(REPLACE " " "_" ProjectId ${ProjectId})
 project(${ProjectId} C CXX)
 
-find_package( PythonInterp 3.6 REQUIRED )
-find_package( PythonLibs 3.6 REQUIRED )
+#find_package( PythonInterp 3.6 REQUIRED )
+#find_package( PythonLibs 3.6 REQUIRED )
 find_package( OpenCV 4.0 REQUIRED )
 find_package( CURL REQUIRED ) 
 
@@ -21,7 +25,7 @@ INCLUDE_DIRECTORIES ( ${SRCDIR} ${PYTHON_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES ( ${CURL_INCLUDE_DIR} )
 INCLUDE_DIRECTORIES ( ${RAPIDJSON_INCLUDE_DIR} )
 
-file(GLOB SOURCES ${SRCDIR}/core/*.cpp ${SRCDIR}/guidance/*.cpp ${SRCDIR}/map_manager/*.cpp ${SRCDIR}/localizer/utm_converter.cpp ${EXTDIR}/qgroundcontrol/*.cpp *.cpp)
+file(GLOB SOURCES ${SRCDIR}/core/*.cpp ${SRCDIR}/guidance/*.cpp ${SRCDIR}/map_manager/*.cpp ${SRCDIR}/localizer/utm_converter.cpp ${EXTDIR}/qgroundcontrol/*.cpp ${SRCDIR}/utils/python_embedding.cpp *.cpp)
  
 add_executable( ${PROJECT_NAME} ${SOURCES} )
 target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} ${PYTHON_LIBRARIES} ${CURL_LIBRARIES} )
